namespace foll_backend.DeviceManagment.Domain.Model.Enums;

public enum DeviceStatus : short
{
    Active = 1,
    Lost = 2,
    InRepair = 3
}
