// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using foll_backend.Shared.Infrastructure.Persistence.EFC.Configuration;

#nullable disable

namespace foll_backend.Migrations
{
    [DbContext(typeof(AppDbContext))]
    partial class AppDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.7")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("foll_backend.Care.Domain.Model.Entities.EmergencyContact", b =>
                {
                    b.Property<long>("EmergencyContactId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("emergency_contact_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("EmergencyContactId"));

                    b.Property<string>("FullName")
                        .IsRequired()
                        .HasMaxLength(150)
                        .HasColumnType("character varying(150)")
                        .HasColumnName("full_name");

                    b.Property<long>("PatientId")
                        .HasColumnType("bigint")
                        .HasColumnName("patient_id");

                    b.Property<string>("PhoneNumber")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)")
                        .HasColumnName("phone_number");

                    b.Property<string>("Relationship")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("relationship");

                    b.HasKey("EmergencyContactId")
                        .HasName("pk_emergency_contacts");

                    b.HasIndex("PatientId")
                        .HasDatabaseName("ix_emergency_contacts_patient_id");

                    b.ToTable("emergency_contacts", "care");
                });

            modelBuilder.Entity("foll_backend.Care.Domain.Model.Entities.Patient", b =>
                {
                    b.Property<long>("PatientId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("patient_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("PatientId"));

                    b.Property<DateOnly>("BirthDate")
                        .HasColumnType("date")
                        .HasColumnName("birth_date");

                    b.Property<short>("BloodType")
                        .HasColumnType("smallint")
                        .HasColumnName("blood_type");

                    b.Property<long?>("CurrentGuardianUserId")
                        .HasColumnType("bigint")
                        .HasColumnName("current_guardian_user_id");

                    b.Property<string>("Dni")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("dni");

                    b.Property<string>("FirstName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("first_name");

                    b.Property<string>("LastName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("last_name");

                    b.Property<string>("MedicalConditions")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("medical_conditions");

                    b.Property<long>("OfficialGuardianUserId")
                        .HasColumnType("bigint")
                        .HasColumnName("official_guardian_user_id");

                    b.HasKey("PatientId")
                        .HasName("pk_patients");

                    b.HasIndex("Dni")
                        .IsUnique()
                        .HasDatabaseName("ix_patients_dni");

                    b.ToTable("patients", "care");
                });

            modelBuilder.Entity("foll_backend.Care.Domain.Model.Entities.PatientInvitation", b =>
                {
                    b.Property<long>("PatientInvitationId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("patient_invitation_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("PatientInvitationId"));

                    b.Property<DateTime>("ExpiresAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("expires_at");

                    b.Property<long>("InvitingUserId")
                        .HasColumnType("bigint")
                        .HasColumnName("inviting_user_id");

                    b.Property<long>("PatientId")
                        .HasColumnType("bigint")
                        .HasColumnName("patient_id");

                    b.Property<short>("RelationshipTypeId")
                        .HasColumnType("smallint")
                        .HasColumnName("relationship_type_id");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)")
                        .HasColumnName("status");

                    b.HasKey("PatientInvitationId")
                        .HasName("pk_patient_invitations");

                    b.HasIndex("InvitingUserId")
                        .HasDatabaseName("ix_patient_invitations_inviting_user_id");

                    b.HasIndex("PatientId")
                        .HasDatabaseName("ix_patient_invitations_patient_id");

                    b.ToTable("patient_invitations", "care");
                });

            modelBuilder.Entity("foll_backend.Care.Domain.Model.Entities.RelationshipType", b =>
                {
                    b.Property<short>("RelationshipTypeId")
                        .HasColumnType("smallint")
                        .HasColumnName("relationship_type_id");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(80)
                        .HasColumnType("character varying(80)")
                        .HasColumnName("name");

                    b.HasKey("RelationshipTypeId")
                        .HasName("pk_relationship_types");

                    b.ToTable("relationship_types", "care");

                    b.HasData(
                        new
                        {
                            RelationshipTypeId = (short)1,
                            Name = "Hijo"
                        },
                        new
                        {
                            RelationshipTypeId = (short)2,
                            Name = "Vecino"
                        },
                        new
                        {
                            RelationshipTypeId = (short)3,
                            Name = "Enfermera"
                        },
                        new
                        {
                            RelationshipTypeId = (short)4,
                            Name = "Familiar"
                        });
                });

            modelBuilder.Entity("foll_backend.DeviceManagment.Domain.Model.Entities.Device", b =>
                {
                    b.Property<long>("DeviceId")
                        .HasColumnType("bigint")
                        .HasColumnName("device_id");

                    b.Property<long?>("AssignedPatientId")
                        .HasColumnType("bigint")
                        .HasColumnName("assigned_patient_id");

                    b.Property<short?>("ConnectivityStatus")
                        .HasColumnType("smallint")
                        .HasColumnName("connectivity_status");

                    b.Property<short?>("CurrentBatteryLevel")
                        .HasColumnType("smallint")
                        .HasColumnName("current_battery_level");

                    b.Property<string>("FirmwareVersion")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("firmware_version");

                    b.Property<bool?>("IsCharging")
                        .HasColumnType("boolean")
                        .HasColumnName("is_charging");

                    b.Property<DateTime?>("LastConnectivityChangeAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("last_connectivity_change_at");

                    b.Property<DateTime?>("LastHeartbeatAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("last_heartbeat_at");

                    b.Property<DateTime?>("MonitoringStartedAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("monitoring_started_at");

                    b.Property<short>("Status")
                        .HasColumnType("smallint")
                        .HasColumnName("status");

                    b.HasKey("DeviceId")
                        .HasName("pk_devices");

                    b.HasIndex("AssignedPatientId")
                        .IsUnique()
                        .HasDatabaseName("ix_devices_assigned_patient_id");

                    b.ToTable("devices", "device");

                    b.HasData(
                        new
                        {
                            DeviceId = 1001L,
                            FirmwareVersion = "sim-1.0.0",
                            Status = (short)1
                        },
                        new
                        {
                            DeviceId = 1002L,
                            FirmwareVersion = "sim-1.0.0",
                            Status = (short)1
                        });
                });

            modelBuilder.Entity("foll_backend.DeviceManagment.Domain.Model.Entities.DeviceEvent", b =>
                {
                    b.Property<long>("DeviceEventId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("device_event_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("DeviceEventId"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("created_at");

                    b.Property<long>("DeviceId")
                        .HasColumnType("bigint")
                        .HasColumnName("device_id");

                    b.Property<string>("EventPayload")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("event_payload");

                    b.Property<string>("EventType")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("event_type");

                    b.Property<bool>("IsResolved")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("boolean")
                        .HasDefaultValue(false)
                        .HasColumnName("is_resolved");

                    b.Property<DateTime?>("ResolvedAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("resolved_at");

                    b.HasKey("DeviceEventId")
                        .HasName("pk_device_events");

                    b.HasIndex("DeviceId")
                        .HasDatabaseName("ix_device_events_device_id");

                    b.HasIndex("DeviceId", "EventType")
                        .IsUnique()
                        .HasDatabaseName("ix_device_events_device_id_event_type")
                        .HasFilter("\"is_resolved\" = false");

                    b.HasIndex("DeviceId", "EventType", "IsResolved")
                        .HasDatabaseName("ix_device_events_device_id_event_type_is_resolved");

                    b.ToTable("device_events", "device");
                });

            modelBuilder.Entity("foll_backend.EmergencyAnalytics.Domain.Model.Entities.EmergencyIncident", b =>
                {
                    b.Property<long>("EmergencyIncidentId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("emergency_incident_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("EmergencyIncidentId"));

                    b.Property<decimal?>("AiConfidenceScore")
                        .HasColumnType("numeric(5,4)")
                        .HasColumnName("ai_confidence_score");

                    b.Property<string>("CancellationReason")
                        .HasMaxLength(80)
                        .HasColumnType("character varying(80)")
                        .HasColumnName("cancellation_reason");

                    b.Property<DateTime?>("CancelledAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("cancelled_at");

                    b.Property<DateTime?>("ClosedAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("closed_at");

                    b.Property<long?>("ClosedByUserId")
                        .HasColumnType("bigint")
                        .HasColumnName("closed_by_user_id");

                    b.Property<long>("DeviceId")
                        .HasColumnType("bigint")
                        .HasColumnName("device_id");

                    b.Property<short>("FallTypeId")
                        .HasColumnType("smallint")
                        .HasColumnName("fall_type_id");

                    b.Property<string>("FinalObservation")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("final_observation");

                    b.Property<Guid>("IncidentKey")
                        .HasColumnType("uuid")
                        .HasColumnName("incident_key");

                    b.Property<DateTime>("LastSignalAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("last_signal_at");

                    b.Property<string>("LastSourcePayload")
                        .HasColumnType("jsonb")
                        .HasColumnName("last_source_payload");

                    b.Property<decimal?>("Latitude")
                        .HasColumnType("numeric(9,6)")
                        .HasColumnName("latitude");

                    b.Property<decimal?>("Longitude")
                        .HasColumnType("numeric(9,6)")
                        .HasColumnName("longitude");

                    b.Property<DateTime>("OpenedAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("opened_at");

                    b.Property<long>("PatientId")
                        .HasColumnType("bigint")
                        .HasColumnName("patient_id");

                    b.Property<DateTime?>("ResolvedAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("resolved_at");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("status");

                    b.HasKey("EmergencyIncidentId")
                        .HasName("pk_emergency_incidents");

                    b.HasIndex("DeviceId")
                        .IsUnique()
                        .HasDatabaseName("ix_emergency_incidents_device_id")
                        .HasFilter("\"status\" = 'Open'");

                    b.HasIndex("FallTypeId")
                        .HasDatabaseName("ix_emergency_incidents_fall_type_id");

                    b.HasIndex("IncidentKey")
                        .IsUnique()
                        .HasDatabaseName("ix_emergency_incidents_incident_key");

                    b.HasIndex("PatientId")
                        .HasDatabaseName("ix_emergency_incidents_patient_id");

                    b.HasIndex("Status")
                        .HasDatabaseName("ix_emergency_incidents_status");

                    b.ToTable("emergency_incidents", "emergency");
                });

            modelBuilder.Entity("foll_backend.EmergencyAnalytics.Domain.Model.Entities.EmergencyOutboxMessage", b =>
                {
                    b.Property<long>("EmergencyOutboxMessageId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("emergency_outbox_message_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("EmergencyOutboxMessageId"));

                    b.Property<string>("Error")
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)")
                        .HasColumnName("error");

                    b.Property<DateTime>("OccurredOn")
                        .HasColumnType("timestamptz")
                        .HasColumnName("occurred_on");

                    b.Property<string>("Payload")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("payload");

                    b.Property<DateTime?>("ProcessedOn")
                        .HasColumnType("timestamptz")
                        .HasColumnName("processed_on");

                    b.Property<int>("RetryCount")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasDefaultValue(0)
                        .HasColumnName("retry_count");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("type");

                    b.HasKey("EmergencyOutboxMessageId")
                        .HasName("pk_emergency_outbox_messages");

                    b.HasIndex("ProcessedOn")
                        .HasDatabaseName("ix_emergency_outbox_messages_processed_on");

                    b.ToTable("outbox_messages", "emergency");
                });

            modelBuilder.Entity("foll_backend.EmergencyAnalytics.Domain.Model.Entities.FallType", b =>
                {
                    b.Property<short>("FallTypeId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("smallint")
                        .HasColumnName("fall_type_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<short>("FallTypeId"));

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("description");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("name");

                    b.Property<short>("SeverityLevel")
                        .HasColumnType("smallint")
                        .HasColumnName("severity_level");

                    b.HasKey("FallTypeId")
                        .HasName("pk_fall_types");

                    b.HasIndex("Name")
                        .IsUnique()
                        .HasDatabaseName("ix_fall_types_name");

                    b.ToTable("fall_types", "emergency");

                    b.HasData(
                        new
                        {
                            FallTypeId = (short)1,
                            Description = "Caída hacia adelante detectada por patrón vectorial frontal del dataset SISFALL.",
                            Name = "FRONTAL",
                            SeverityLevel = (short)1
                        },
                        new
                        {
                            FallTypeId = (short)2,
                            Description = "Caída lateral detectada por desplazamiento dominante en eje lateral del dataset SISFALL.",
                            Name = "LATERAL",
                            SeverityLevel = (short)2
                        },
                        new
                        {
                            FallTypeId = (short)3,
                            Description = "Tipo de caída no clasificado o no enviado por el dispositivo/IA.",
                            Name = "UNKNOWN",
                            SeverityLevel = (short)2
                        },
                        new
                        {
                            FallTypeId = (short)4,
                            Description = "Caída hacia atrás detectada por patrón vectorial posterior del dataset SISFALL.",
                            Name = "BACKWARD",
                            SeverityLevel = (short)1
                        });
                });

            modelBuilder.Entity("foll_backend.IAM.Domain.Model.Entities.User", b =>
                {
                    b.Property<long>("UserId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("user_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("UserId"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("created_at");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("email");

                    b.Property<string>("FirstName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("first_name");

                    b.Property<string>("LastName")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("last_name");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)")
                        .HasColumnName("password_hash");

                    b.Property<string>("PhoneNumber")
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)")
                        .HasColumnName("phone_number");

                    b.Property<DateTime?>("UpdatedAt")
                        .HasColumnType("timestamptz")
                        .HasColumnName("updated_at");

                    b.HasKey("UserId")
                        .HasName("pk_users");

                    b.HasIndex("Email")
                        .IsUnique()
                        .HasDatabaseName("ix_users_email");

                    b.ToTable("users", "iam");
                });

            modelBuilder.Entity("foll_backend.Shared.Domain.Model.Entities.OutboxMessage", b =>
                {
                    b.Property<long>("OutboxMessageId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("outbox_message_id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("OutboxMessageId"));

                    b.Property<string>("Error")
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)")
                        .HasColumnName("error");

                    b.Property<DateTime>("OccurredOn")
                        .HasColumnType("timestamptz")
                        .HasColumnName("occurred_on");

                    b.Property<string>("Payload")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("payload");

                    b.Property<DateTime?>("ProcessedOn")
                        .HasColumnType("timestamptz")
                        .HasColumnName("processed_on");

                    b.Property<int>("RetryCount")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasDefaultValue(0)
                        .HasColumnName("retry_count");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)")
                        .HasColumnName("type");

                    b.HasKey("OutboxMessageId")
                        .HasName("pk_outbox_messages");

                    b.HasIndex("ProcessedOn")
                        .HasDatabaseName("ix_outbox_messages_processed_on");

                    b.ToTable("outbox_messages", "device");
                });

            modelBuilder.Entity("foll_backend.Care.Domain.Model.Entities.EmergencyContact", b =>
                {
                    b.HasOne("foll_backend.Care.Domain.Model.Entities.Patient", null)
                        .WithMany("EmergencyContacts")
                        .HasForeignKey("PatientId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_emergency_contacts_patients_patient_id");
                });

            modelBuilder.Entity("foll_backend.Care.Domain.Model.Entities.Patient", b =>
                {
                    b.OwnsMany("foll_backend.Care.Domain.Model.ValueObjects.CaregiverRole", "Caregivers", b1 =>
                        {
                            b1.Property<long>("patient_id")
                                .HasColumnType("bigint")
                                .HasColumnName("patient_id");

                            b1.Property<long>("UserId")
                                .ValueGeneratedOnAdd()
                                .HasColumnType("bigint")
                                .HasColumnName("user_id");

                            NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b1.Property<long>("UserId"));

                            b1.Property<short>("RelationshipTypeId")
                                .HasColumnType("smallint")
                                .HasColumnName("relationship_type_id");

                            b1.HasKey("patient_id", "UserId")
                                .HasName("pk_user_patients");

                            b1.ToTable("user_patients", "care");

                            b1.WithOwner()
                                .HasForeignKey("patient_id")
                                .HasConstraintName("fk_user_patients_patients_patient_id");
                        });

                    b.Navigation("Caregivers");
                });

            modelBuilder.Entity("foll_backend.Care.Domain.Model.Entities.PatientInvitation", b =>
                {
                    b.HasOne("foll_backend.Care.Domain.Model.Entities.Patient", null)
                        .WithMany("Invitations")
                        .HasForeignKey("PatientId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_patient_invitations_patients_patient_id");
                });

            modelBuilder.Entity("foll_backend.EmergencyAnalytics.Domain.Model.Entities.EmergencyIncident", b =>
                {
                    b.HasOne("foll_backend.EmergencyAnalytics.Domain.Model.Entities.FallType", "FallType")
                        .WithMany()
                        .HasForeignKey("FallTypeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_emergency_incidents_fall_types_fall_type_id");

                    b.Navigation("FallType");
                });

            modelBuilder.Entity("foll_backend.Care.Domain.Model.Entities.Patient", b =>
                {
                    b.Navigation("EmergencyContacts");

                    b.Navigation("Invitations");
                });
#pragma warning restore 612, 618
        }
    }
}
